PR/42320: Alexander Nasonov: According to: http://www.opengroup.org/onlinepubs/7990989775/xcu/awk.html the LC_NUMERIC decimal point recognized is always period. Make it so.